--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
   <groupId>org.testng</groupId>
   <artifactId>testng</artifactId>
   <version>7.1.0</version>
-  <scope>test</scope>
+  <scope>compile</scope>
 </dependency>
   <dependency>
     <groupId>com.aventstack</groupId>
